samples/_failures_safe/1761517573_cf476c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6f71df7.c: In function ‘print_token’:
./samples/SAFE/__tmp_e6f71df7.c:163:12: error: missing terminating " character
  163 |     printf("Line
      |            ^~~~~
./samples/SAFE/__tmp_e6f71df7.c:163:5: error: expected expression at end of input
  163 |     printf("Line
      |     ^~~~~~
./samples/SAFE/__tmp_e6f71df7.c:163:5: error: expected declaration or statement at end of input
